# eudaq

main/lib/python/src/: PybindProducer.cc
user/: CMakeLists.txt
user/CAEN_DT5742/: CMakeLists.txt  README.md
user/CAEN_DT5742/misc/: CAENDT5742_example.conf
user/CAEN_DT5742/module/src/: CAEN_DT5748RawEvent2StdEventConverter.cc
user/CAEN_DT5742/python/: CAENDT5742Producer.py
